Implemented authentication and swagger documentation
