# swagger/v1/swagger.yaml
@@ -3,11 +3,37 @@ info:
   title: API V1
   version: v1
 paths:
+  /api/v1/users/sign_in:
+    post:
+      summary: User Login 
+      tags:
+        - Users
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/UserLogin'
+      responses:
+        '201':
+          description: Successfully signed in
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginSuccessResponse'
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/users:
     get:
       summary: List of all users
       tags:
         - Users
+      security:
+        - JWT: []
       responses:
         '200':
           description: Users List
@@ -40,8 +66,109 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /api/v1/users/{id}:
+    get:
+      summary: Get user by ID
+      tags:
+        - Users
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: User details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+
+    put:
+      summary: Update user profile
+      tags:
+        - Users
+      security:
+        - JWT: []        
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/UserUpdate'
+      responses:
+        '200':
+          description: Updated user details
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+
+
 components:
+  securitySchemes:
+    JWT:
+      type: apiKey
+      name: Authorization
+      in: header
+
   schemas:
+    UserLogin:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+      required:
+        - email
+        - password
+
+    LoginSuccessResponse:
+      type: object
+      properties:
+        message:
+          type: string
+        token:
+          type: string
+    UserUpdate:
+      type: object
+      properties:
+        first_name:
+          type: string
+        last_name:
+          type: string
+        primary_mobile:
+          type: string
+        secondary_mobile:
+          type: string
+        linkedin_url:
+          type: string
+        experience:
+          type: integer
+        bio:
+          type: string
+        achievements:
+          type: string
+        password:
+          type: string
+          minLength: 6    # Minimum password length
+        password_confirmation:
+          type: string
+                  
     UserRegistration:
       type: object
       properties:
